# crashpad

./: .bazelrc  .clang-format  .gitattributes  .gitignore  .gitmodules  .gn  .style.yapf  .vpython  0001-Add-attachment-handling.-Create-test-app-Mac-OS.patch  AUTHORS  BUILD.bazel  BUILD.gn  CMakeLists.txt  CONTRIBUTORS  DEPS  LICENSE  MANU.md  Makefile  OWNERS  PRESUBMIT.py  README.getsentry.md  README.md  README.timedoctor.md  WORKSPACE  build_crashpad.py  codereview.settings  commit-queue.cfg  cr-buildbucket.cfg  crashpad.doxy  crashpad.doxy.h  crashpad.gyp  crashpad_tests.cmx  groups  luci-logdog.cfg  luci-milo.cfg  luci-scheduler.cfg  navbar.md  package.h  poo.txt  poo_test.txt  (+5 more)
client/: BUILD.bazel  BUILD.gn  CMakeLists.txt  annotation.cc  annotation.h  annotation_list.cc  annotation_list.h  annotation_list_test.cc  annotation_test.cc  annotations.cc  annotations.h  annotations_second_test.cc  annotations_test.cc  capture_context_mac.S  capture_context_mac.h  capture_context_mac_test.cc  client.gyp  client_argv_handling.cc  client_argv_handling.h  client_test.gyp  contiguous_string_map.cc  contiguous_string_map.h  contiguous_string_map_test.cc  crash_handler_ios.cc  crash_report_database.cc  crash_report_database.h  crash_report_database_fuchsia.cc  crash_report_database_generic.cc  crash_report_database_ios.mm  crash_report_database_mac.h  crash_report_database_mac.mm  crash_report_database_test.cc  crash_report_database_win.cc  crash_report_database_win.h  crashpad_client.h  crashpad_client_fuchsia.cc  crashpad_client_fuchsia_test.cc  crashpad_client_ios.cc  crashpad_client_ios.mm  crashpad_client_ios_test.cc  (+40 more)
client/ios_handler/: exception_processor.h  exception_processor.mm  in_process_handler.cc  in_process_handler.h  in_process_handler_util.cc  in_process_handler_util.h  in_process_intermediate_dump_handler.cc  (+4 more)
compat/: BUILD.bazel  BUILD.gn  CMakeLists.txt  compat.gyp  empty.c
handler/: BUILD.bazel  BUILD.gn  CMakeLists.txt  crash_report_upload_rate_limit.h  crash_report_upload_rate_limit_test.cc  crash_report_upload_thread.cc  crash_report_upload_thread.h  crashpad_handler.ad  crashpad_handler.md  crashpad_handler_main.cc  crashpad_handler_test.cc  crashpad_handler_test_extended_handler.cc  extended_handler_main.cc  handler.gyp  handler_main.cc  handler_main.h  handler_test.gyp  main.cc  minidump_to_upload_parameters.cc  minidump_to_upload_parameters.h  minidump_to_upload_parameters_test.cc  prune_crash_reports_thread.cc  prune_crash_reports_thread.h  relaunch_signal.cc  relaunch_signal.h
minidump/: BUILD.bazel  BUILD.gn  CMakeLists.txt  minidump.gyp  minidump_annotation_writer.cc  minidump_annotation_writer.h  minidump_annotation_writer_test.cc  minidump_byte_array_writer.cc  minidump_byte_array_writer.h  minidump_byte_array_writer_test.cc  minidump_context.h  minidump_context_test_util.cc  minidump_context_test_util.h  minidump_context_writer.cc  minidump_context_writer.h  minidump_context_writer_test.cc  minidump_crashpad_info_writer.cc  minidump_crashpad_info_writer.h  minidump_crashpad_info_writer_test.cc  minidump_crashpad_module_writer.cc  minidump_crashpad_module_writer.h  minidump_crashpad_module_writer_test.cc  minidump_exception_writer.cc  minidump_exception_writer.h  minidump_exception_writer_test.cc  minidump_extensions.cc  minidump_extensions.h  minidump_file_writer.cc  minidump_file_writer.h  minidump_file_writer_test.cc  minidump_file_writer_test_util.cc  minidump_file_writer_test_util.h  minidump_handle_writer.cc  minidump_handle_writer.h  minidump_handle_writer_test.cc  minidump_location_descriptor_list_writer.cc  minidump_location_descriptor_list_writer.h  minidump_location_descriptor_list_writer_test.cc  minidump_memory_info_writer.cc  minidump_memory_info_writer.h  (+61 more)
snapshot/: BUILD.bazel  BUILD.gn  CMakeLists.txt  annotation_snapshot.cc  annotation_snapshot.h  annotations_file_1_test.cc  annotations_file_2_test.cc  annotations_shared_header_test.h  annotations_test.cc  annotations_test_helper.cc  annotations_test_helper.h  capture_memory.cc  capture_memory.h  capture_referenced_memory.cc  capture_referenced_memory.h  cpu_architecture.h  cpu_context.cc  cpu_context.h  cpu_context_mac.cc  cpu_context_mac.h  cpu_context_mac_test.cc  cpu_context_test.cc  crashpad_info_client_options.cc  crashpad_info_client_options.h  crashpad_info_client_options_test.cc  crashpad_info_size_test_module.cc  crashpad_info_size_test_note.S  exception_snapshot.h  exception_snapshot_mac.cc  exception_snapshot_mac.h  handle_snapshot.cc  handle_snapshot.h  hash_types_test.cc  memory_snapshot.cc  memory_snapshot.h  memory_snapshot_generic.h  memory_snapshot_mac.cc  memory_snapshot_mac.h  memory_snapshot_test.cc  module_snapshot.h  (+12 more)
test/: BUILD.bazel  BUILD.gn  dl_handle.cc  dl_handle.h  errors.cc  errors.h  file.cc  filesystem.cc  filesystem.h  fuchsia_crashpad_tests.cmx  gmock_main.cc  gtest_death.h  gtest_death_check.h  gtest_disabled.cc  gtest_disabled.h  gtest_main.cc  gtest_runner_ios.h  gtest_runner_ios.mm  hex_string.cc  hex_string.h  hex_string_test.cc  main_arguments.cc  main_arguments.h  main_arguments_test.cc  multiprocess.h  multiprocess_exec.cc  multiprocess_exec.h  multiprocess_exec_fuchsia.cc  multiprocess_exec_posix.cc  multiprocess_exec_test.cc  multiprocess_exec_test_child.cc  multiprocess_exec_win.cc  multiprocess_posix.cc  multiprocess_posix_test.cc  paths.cc  paths.h  paths_linux.cc  paths_mac.cc  paths_test.cc  paths_test_data_root.txt  (+26 more)
tools/: BUILD.bazel  BUILD.gn  CMakeLists.txt  base94_encoder.cc  catch_exception_tool.ad  catch_exception_tool.cc  crasher.cc  crashpad_database_util.ad  crashpad_database_util.cc  crashpad_http_upload.cc  crashpad_http_upload.md  exception_port_tool.ad  exception_port_tool.cc  generate_dump.ad  generate_dump.cc  metricskit_report_converter.mm  minidump_log_processor.cc  on_demand_service_tool.ad  on_demand_service_tool.mm  run_with_crashpad.cc  run_with_crashpad.md  tool_support.cc  tool_support.h  tools.gyp
util/: BUILD.bazel  BUILD.gn  CMakeLists.txt  no_cfi_icall.gyp  util.gyp  util_test.gyp
(+1159 files in other folders)
