# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("build/dependencies.gni")

import("//testing/test.gni")

config("crashpad_config") {
  include_dirs = [ "$crashpad_source_root" ]
}

test("crashpad_tests") {
  deps = [
    "client:client_test",
    "handler:handler_test",
    "minidump:minidump_test",
    "snapshot:snapshot_test",
    "test:gmock_main",
    "test:test_test",
    "util:util_test",
  ]
}
