# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

static_library("client") {
  sources = [
    "annotation.cc",
    "annotation.h",
    "annotation_list.cc",
    "annotation_list.h",
    "crash_report_database.cc",
    "crash_report_database.h",
    "crash_report_database_mac.mm",
    "crash_report_database_win.cc",
    "crashpad_client.h",
    "crashpad_client_mac.cc",
    "crashpad_client_win.cc",
    "crashpad_info.cc",
    "crashpad_info.h",
    "prune_crash_reports.cc",
    "prune_crash_reports.h",
    "settings.cc",
    "settings.h",
    "simple_address_range_bag.h",
    "simple_string_dictionary.h",
    "simulate_crash.h",
    "simulate_crash_mac.cc",
    "simulate_crash_mac.h",
    "simulate_crash_win.h",
  ]

  if (is_mac) {
    sources += [
      "capture_context_mac.S",
      "capture_context_mac.h",
    ]
  }

  public_configs = [ "//third_party/crashpad/crashpad:crashpad_config" ]

  deps = [
    "//base",
    "//third_party/crashpad/crashpad/compat",
    "//third_party/crashpad/crashpad/util",
  ]

  if (is_win) {
    libs = [ "rpcrt4.lib" ]
    cflags = [ "/wd4201" ]  # nonstandard extension used : nameless struct/union
  }
}

source_set("client_test") {
  testonly = true

  sources = [
    "annotation_list_test.cc",
    "annotation_test.cc",
    "crash_report_database_test.cc",
    "prune_crash_reports_test.cc",
    "settings_test.cc",
    "simple_address_range_bag_test.cc",
    "simple_string_dictionary_test.cc",
  ]

  if (is_mac) {
    sources += [
      "capture_context_mac_test.cc",
      "simulate_crash_mac_test.cc",
    ]
  }

  if (is_win) {
    sources += [ "crashpad_client_win_test.cc" ]
  }

  deps = [
    ":client",
    "//base",
    "//testing/gmock",
    "//testing/gtest",
    "//third_party/crashpad/crashpad/compat",
    "//third_party/crashpad/crashpad/test",
    "//third_party/crashpad/crashpad/util",
  ]

  data_deps = [
    "//third_party/crashpad/crashpad/handler:crashpad_handler",
  ]

  if (is_win) {
    data_deps +=
        [ "//third_party/crashpad/crashpad/handler:crashpad_handler_console" ]
  }
}
