# Copyright 2019 The Crashpad Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["notice"])  # Apache 2

cc_library(
    name = "compat",
    hdrs = [
        # if (crashpad_is_mac)
        "mac/AvailabilityMacros.h",
        "mac/kern/exc_resource.h",
        "mac/mach-o/loader.h",
        "mac/mach/mach.h",
        "mac/sys/resource.h",
    ] + [
        # if (!crashpad_is_win)
        "non_win/dbghelp.h",
        "non_win/minwinbase.h",
        "non_win/timezoneapi.h",
        "non_win/verrsrc.h",
        "non_win/windows.h",
        "non_win/winnt.h",
    ] + [
        # if (!crashpad_is_linux && !crashpad_is_android && !crashpad_is_fuchsia)
        "non_elf/elf.h",
    ],
    includes = [
        # if (crashpad_is_mac)
        "mac",
    ] + [
        # if (!crashpad_is_win)
        "non_win",
    ] + [
        # if (!crashpad_is_linux && !crashpad_is_android && !crashpad_is_fuchsia)
        "non_elf",
    ],
    visibility = [
        "//:__subpackages__",
    ],
)
