# Copyright 2016 The Crashpad Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

config("compat_public_config") {
  include_dirs = []

  if (is_mac) {
    include_dirs += [
      "mac",
      "non_cxx11_lib",
    ]
  }
  if (is_win) {
    include_dirs += [ "win" ]
  } else {
    include_dirs += [ "non_win" ]
  }
}

static_library("compat") {
  sources = [
    "mac/AvailabilityMacros.h",
    "mac/kern/exc_resource.h",
    "mac/mach-o/getsect.cc",
    "mac/mach-o/getsect.h",
    "mac/mach-o/loader.h",
    "mac/mach/mach.h",
    "mac/sys/resource.h",
    "non_cxx11_lib/type_traits",
    "non_cxx11_lib/utility",
    "non_mac/mach/mach.h",
    "non_win/dbghelp.h",
    "non_win/minwinbase.h",
    "non_win/timezoneapi.h",
    "non_win/verrsrc.h",
    "non_win/windows.h",
    "non_win/winnt.h",
    "win/getopt.h",
    "win/strings.cc",
    "win/strings.h",
    "win/sys/types.h",
    "win/time.cc",
    "win/time.h",
    "win/winnt.h",
  ]

  public_configs = [ ":compat_public_config" ]

  deps = []

  if (is_mac) {
    deps += [ "//third_party/apple_cctools" ]
  } else if (is_win) {
    deps += [ "//third_party/getopt" ]
  }
}
