# Copyright 2019 The Crashpad Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["notice"])  # Apache 2

cc_library(
    name = "handler",
    srcs = [
        "crash_report_upload_thread.cc",
        "handler_main.cc",
        "minidump_to_upload_parameters.cc",
        "prune_crash_reports_thread.cc",
        "user_stream_data_source.cc",
    ] + [
        # if (crashpad_is_mac)
        "mac/crash_report_exception_handler.cc",
        "mac/exception_handler_server.cc",
        "mac/file_limit_annotation.cc",
    ],
    hdrs = [
        "crash_report_upload_thread.h",
        "handler_main.h",
        "minidump_to_upload_parameters.h",
        "prune_crash_reports_thread.h",
        "user_stream_data_source.h",
    ] + [
        # if (crashpad_is_mac)
        "mac/crash_report_exception_handler.h",
        "mac/exception_handler_server.h",
        "mac/file_limit_annotation.h",
    ],
    visibility = [
        "//:__subpackages__",
    ],
    deps = [
        "//client",
        "//minidump",
        "//snapshot",
        "//third_party/mini_chromium:base",
        "//tools:tool_support",
        "//util",
    ],
)

cc_test(
    name = "crashpad_handler_test",
    srcs = [
        "minidump_to_upload_parameters_test.cc",
    ],
    deps = [
        ":handler",
        "//client",
        "//compat",
        "//snapshot",
        "//snapshot:test_support",
        "//test",
        "//test:gtest_main",
        "//third_party/mini_chromium:base",
        "//util",
        "@gtest",
    ],
)

cc_binary(
    name = "crashpad_handler",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":handler",
        # "//build:default_exe_manifest_win",
        "//compat",
        "//third_party/mini_chromium:base",
    ],
)
